🐞 fix: resolve text color issue in dark mode

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -47,7 +47,7 @@ hr {
 }
 
 * {
-  color: colors.$dark-text;
+  color: colors.$light-1;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
